Fixed spacing for dropdown in panel title

--- a/uberfire-workbench/uberfire-workbench-client-views-patternfly/src/main/resources/org/uberfire/client/views/uberfire-patternfly.css
+++ b/uberfire-workbench/uberfire-workbench-client-views-patternfly/src/main/resources/org/uberfire/client/views/uberfire-patternfly.css
@@ -38,7 +38,7 @@
 }
 
 .uf-listbar-panel-header .dropdown-menu {
-    margin-top: 5px;
+    margin-top: 8px;
 }
 
 .uf-listbar-panel-header-toolbar .dropdown > .btn {
